--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cache-manager": "3.2.1",
     "class-transformer": "0.2.3",
     "class-validator": "0.11.1",
+    "compression": "1.7.4",
     "express": "4.17.1",
     "mongoose": "5.9.7",
     "reflect-metadata": "0.1.13",
