--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "0.11.1",
     "compression": "1.7.4",
     "express": "4.17.1",
+    "helmet": "^3.22.0",
     "mongoose": "5.9.7",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
