--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "compression": "1.7.4",
     "express": "4.17.1",
     "helmet": "3.22.0",
+    "migrate-mongo": "7.1.0",
     "mongoose": "5.9.7",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
